Prevent covered collection tree.

--- a/src/scss/components/_tag-selector.scss
+++ b/src/scss/components/_tag-selector.scss
@@ -6,7 +6,6 @@
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	height: 100%;
 	position: absolute; // Dev only
 	bottom: 0;          // …
 	left: 0;            // …
